--- a/style.css
+++ b/style.css
@@ -77,11 +77,11 @@ nav ul li a:hover::after{
 }
 .about-col-1{
     flex-basis: 35%;
+    padding-top: 300px;
 }
 .about-col-1 img{
-    padding-top: 300px;
     width: 100%;
-    border-radius: 15px;
+    border-radius: 20px;
 }
 .about-col-2{
     flex-basis: 60%;
@@ -116,6 +116,58 @@ nav ul li a:hover::after{
 }
 .tab-links.active-link::after{
     width:50%;
-    
+}
+.tab-contents ul li{
+    list-style: none;
+    margin: 10px 0;
+}
+.tab-contents ul li span{
+    color: #b54769;
+    font-size: 14px;
+}
+.tab-contents{
+    display: none;
+}
+.tab-contents.active-tab{
+    display: block;
+}
+/*--services-*/
+#services{
+    padding: 30px 0;
+
+}
+.services-list{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+    grid-gap: 40px;
+    margin-top: 50px;
+}
+.services-list div{
+    background: #262626;
+    padding: 40px;
+    font-size: 13px;
+    font-weight: 300;
+    border-radius: 10px;
+    transition: background 0.5s, transform 0.5s;
+}
+.services-list div i{
+    font-size: 50px;
+    margin-bottom: 30px;
+}
+.services-list div h2{
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 15px;
+}
+.services-list div a{
+    text-decoration: none;
+    color:#fff;
+    font-size: 12px;
+    margin-top: 20px;
+    display: inline-block;
+}
+.services-list div:hover{
+    background:#ff004f;
+    transform: translateY(-10px);
 
 }
